--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
-    "react-dom": "^19.0.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-textarea-autosize": "^8.5.7",
     "sonner": "^1.7.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.1",
+    "usehooks-ts": "latest",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
